채팅 로딩 추가 수정